# Schema-Check

./: README.md  pyproject.toml
src/schema-check/: __init__.py  cli.py  diff.py  io.py  report.py  schema.py
tests/: test_diff.py
